[package]
name = "cmon-agent"
version = "0.1.0"
authors = ["Jenkins Agent <jenkins-agent@joyent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
kstat = "0.1.0"

[patch.crates-io]
mio-uds = { git = "https://github.com/papertigers/mio-uds", branch = "master"}
